[gd_scene load_steps=3 format=3 uid="uid://cttmjkjlnm0xy"]

[ext_resource type="Texture2D" uid="uid://uthfian4bqg6" path="res://UI_health.png" id="1_il3u1"]
[ext_resource type="Script" uid="uid://bvouk16w4t62t" path="res://level_select.gd" id="1_vomi7"]

[node name="Level Select" type="Node2D"]
script = ExtResource("1_vomi7")

[node name="UI Design" type="Sprite2D" parent="."]
position = Vector2(338, 578)
texture = ExtResource("1_il3u1")

[node name="World 1" type="VBoxContainer" parent="."]
offset_left = 41.0
offset_top = 115.0
offset_right = 383.0
offset_bottom = 409.0

[node name="Level 1" type="Button" parent="World 1"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 1"

[node name="Level 4" type="Button" parent="World 1"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 4"

[node name="World 2" type="VBoxContainer" parent="."]
offset_left = 410.0
offset_top = 115.0
offset_right = 752.0
offset_bottom = 409.0

[node name="Level 2" type="Button" parent="World 2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 2"

[node name="Level 5" type="Button" parent="World 2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 5"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 780.0
offset_top = 118.0
offset_right = 1122.0
offset_bottom = 412.0

[node name="Level 3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 3"

[node name="Level 6" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Level 6"

[connection signal="button_down" from="World 1/Level 1" to="." method="_on_level_1_button_down"]
[connection signal="button_down" from="World 1/Level 4" to="." method="_on_level_4_button_down"]
[connection signal="button_down" from="World 2/Level 2" to="." method="_on_level_2_button_down"]
[connection signal="button_down" from="World 2/Level 5" to="." method="_on_level_5_button_down"]
[connection signal="button_down" from="VBoxContainer/Level 3" to="." method="_on_level_3_button_down"]
[connection signal="button_down" from="VBoxContainer/Level 6" to="." method="_on_level_6_button_down"]
